Change menu hover properties and make sure it isnt slightly visible on screen.

--- a/client/stylesheets/global.less
+++ b/client/stylesheets/global.less
@@ -189,7 +189,7 @@ header {
       line-height: 1;
 
       &:hover .menu-list {
-        .transform(translateY(0px));
+        display: block;
       }
     }
 
@@ -227,8 +227,7 @@ header {
       list-style: none;
       right: 0;
       float: right;
-      .transform(translateY(-264px));
-      .transition();
+      display: none;
 
       a {
         display: block;
